更新文件所在目录

--- a/5-组件详解/0-组件详解.html
+++ b/5-组件详解/0-组件详解.html
@@ -83,7 +83,7 @@
                 {{message}}<br/>
                 <count/>
                 <gg-boy/>
-                <hello-world>
+                <hello-world/>
                 <counter/>
             </div>
         `
