--- a/3-基础初探/0-数据-方法-计算属性.html
+++ b/3-基础初探/0-数据-方法-计算属性.html
@@ -57,11 +57,11 @@
             <div
             @click='handleClick'
             >
-            {{formatString(message)}},<br/>
-            {{count*price}},<br/>
-            {{total}},<br/>
-            {{getTotal()}},<br/>
-            {{date}},<br/>
+                {{formatString(message)}},<br/>
+                {{count*price}},<br/>
+                computed:{{total}},<br/>
+                method:{{getTotal()}},<br/>
+                computed:{{date}},<br/>
             </div>
         `
     })
